feat: add review picture attachments
